crates/wasm-cli/tests/snapshots/snapshot__search_view_with_search_active_snapshot.snap
---
source: crates/wasm-cli/tests/snapshot.rs
expression: output
---
┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐
│wasi_                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                               No packages found matching your search.










 /  Search   p  Pull selected   r  Refresh tags   Enter  View details   Esc  Clear
