crates/wasm-cli/tests/snapshots/snapshot__tab_bar_first_selected_snapshot.snap
---
source: crates/wasm-cli/tests/snapshot.rs
expression: output
---
┌ Test App - ready ────────────────────────────────────────┐
│ First [1] │ Second [2] │ Third [3]                       │
└──────────────────────────────────────────────────────────┘
