crates/wasm-cli/tests/snapshots/snapshot__tab_bar_loading_state_snapshot.snap
---
source: crates/wasm-cli/tests/snapshot.rs
expression: output
---
┌ Test App - loading... ───────────────────────────────────┐
│ First [1] │ Second [2] │ Third [3]                       │
└──────────────────────────────────────────────────────────┘
